# data-consumer-examples

./: .gitignore  README.md
examples/local_delivery_service/: Makefile  README.md  dbt_project.yml  profiles.yml  pyproject.toml  vars.yml
examples/local_delivery_service/analyses/subscription_queries/: transactions_pfd.sql  transactions_ubereats.sql
examples/local_delivery_service/docs/: blog_part-01.md
examples/local_delivery_service/models/sources/: sources.yml
examples/local_delivery_service/models/staging/: transactions_unioned.sql
examples/local_delivery_service/models/subscriptions/: demographics_tn.sql  transactions_doordash.sql
