[tool.poetry]
name = "local-delivery-service"
version = "0.1.0"
description = "A dbt project for analyzing how a local delivery service compares to the big players"
authors = ["Tim O'Guin <tim@mytiki.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.7.4"
dbt-athena-community = "^1.7.1"
dbt-duckdb = "^1.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
sqlfluff = "^2.3.5"
sqlfmt = "^0.0.3"
prettier = "^0.0.7"

[tool.sqlfluff.core]
dialect = "athena"
templater = "jinja"
sql_file_exts = ".sql"

[tool.sqlfluff.templater.dbt]
project_dir = "./"

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.literals]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.types]
capitalisation_policy = "lower"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
